After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 572819 - Does not save image which displayed
Does not save image which displayed
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.6.x (obsolete)
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 600849 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-02-23 07:23 UTC by Ilya Chernykh
Modified: 2013-12-17 15:53 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
Use the suggested filename when saving images (2.67 KB, patch)
2013-12-15 16:22 UTC, William Jon McCann
committed Details | Review

Description Ilya Chernykh 2009-02-23 07:23:01 UTC
Please describe the problem:
1. Go to this URL:
http://forum.ubuntu.ru/index.php?action=dlattach;topic=29975.0;attach=11720;image

2. Right-click on the image and select "Save image as...".

3. Instead of the image, file index.php is saved.


Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Reinout van Schouwen 2009-02-23 09:44:54 UTC
Confirmed, Ff doesn't show this problem.
Comment 2 Diego Escalante Urrelo (not reading bugmail) 2010-01-13 23:19:03 UTC
I have a solution for bug #600987 (that reimplements image downloads with context menu) that fixes this bug. However the suggested name in the filechooser is "index.php" (but the content is the image). I suspect this is because the best guess possible is that.
Perhaps WebKit should be doing more sniffing. Anyway, we can completely fix that little issue later.
Comment 3 Tobias Endrigkeit 2012-10-29 19:44:53 UTC
Bumped to version 3.6, because problem is not solved. (tested with web 3.6.0)
Comment 4 William Jon McCann 2013-12-15 15:54:53 UTC
Doesn't seem to honor:
Content-Disposition: inline; filename="13022009.png"
Comment 5 William Jon McCann 2013-12-15 16:22:49 UTC
Created attachment 264228 [details] [review]
Use the suggested filename when saving images
Comment 6 William Jon McCann 2013-12-15 18:49:24 UTC
*** Bug 600849 has been marked as a duplicate of this bug. ***
Comment 7 Gustavo Noronha (kov) 2013-12-17 15:13:11 UTC
Review of attachment 264228 [details] [review]:

That's great!
Comment 8 William Jon McCann 2013-12-17 15:53:11 UTC
Attachment 264228 [details] pushed as 660aabd - Use the suggested filename when saving images