Use the suggested filename when saving images

https://bugzilla.gnome.org/show_bug.cgi?id=572819